Implement the following contents  - Demo app install feature  - Demo app execution function  - Login to deployment cell

--- a/appcell-resources/css/settings.css
+++ b/appcell-resources/css/settings.css
@@ -15,3 +15,21 @@ header {
 .accountMenu, .roleMenu, .relationMenu {
     padding: 0px;
 }
+
+.app-profile{
+    text-align: left;
+}
+
+a.appToggle{
+    background-color: #337ab7;
+    border-color: #337ab7;
+    color: #fff;
+    text-align:center;
+}
+
+.appToggle:after{
+    text-align:center;
+    width: 10px;
+    height: 10px;
+    content: "";
+}
