--- a/appcell-resources/css/main.css
+++ b/appcell-resources/css/main.css
@@ -12,7 +12,7 @@ div.p-app {
 
 a.p-app-icon {
   width: 48px;
-  heigth: 48px;
+  height: 48px;
   display: block;
   background-color: rgba(128,200,128,0.9);
 }
@@ -25,7 +25,7 @@ a.p-app-icon:hover {
 
 img.p-app-icon {
   width: 48px;
-  heigth: 48px;
+  height: 48px;
   -webkit-filter: invert(100%);
   filter: invert(100%);
 }
@@ -116,19 +116,13 @@ header {
     }
     a.p-app-icon {
       width: 24px;
-      heigth: 24px;
-      display: block;
-      background-color: rgba(128,200,128,0.9);
-    }
-    a.p-app-icon {
-      width: 24px;
-      heigth: 24px;
+      height: 24px;
       display: block;
       background-color: rgba(128,200,128,0.9);
     }
     img.p-app-icon {
       width: 24px;
-      heigth: 24px;
+      height: 24px;
       -webkit-filter: invert(100%);
       filter: invert(100%);
     }
