--- a/appcell-resources/css/common.css
+++ b/appcell-resources/css/common.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #2B2B2B;
+    /*background-color: #2B2B2B;*/
 }
 
 .user-dashboard {
@@ -7,7 +7,7 @@ body{
 }
 
 .panel-default {
-    position: absolute;
+    /*position: absolute;*/
     z-index: 0;
     width: 100%;
     float:left;
@@ -77,6 +77,7 @@ body{
 .menu-title {
     border-top: 1px solid #c7c7c7;
     border-bottom: 1px solid #c7c7c7;
+    width: 100%;
 }
 
 .sidemenu-list {
@@ -87,7 +88,7 @@ body{
 }
 
 .sidemenu-itemEmpty {
-    width: 45px;
+    width: 20%;
 }
 
 .sidemenu-item {
@@ -118,6 +119,38 @@ body{
 .slide-on-holder {
     -webkit-transform: translate3d(-200%, 0, 0);
     transform: translate3d(-200%, 0, 0);
+}
+
+div.ins-app {
+  float: left;
+  width: 208px;
+  font-family: Raleway;
+  margin-bottom: 16px;
+  color: #efd;
+}
+a.ins-app-icon {
+  width: 48px;
+  height: 48px;
+  display: block;
+}
+a.ins-app-icon:hover {
+  background-color: rgba(128,200,128,0.9);
+  -webkit-box-shadow: 1px 8px 4px 4px rgba(200, 200, 200, 0.54);
+  -moz-box-shadow:    1px 8px 4px 4px rgba(200, 200, 200, 0.54);
+  box-shadow:         1px 8px 4px 4px rgba(200, 200, 200, 0.54);
+}
+
+img.ins-app-icon {
+  width: 48px;
+  height: 48px;
+}
+
+div.ins-app-name {
+  text-align: center;
+  margin: 10px 0px 0px 0px;
+  /*text-shadow:    1px 4px 2px rgba(50, 50, 50, 0.54);*/
+  color: #333333;
+  font-size: 21px;
 }
 
 .moveIcon {
@@ -152,10 +185,11 @@ body{
     width: 70%;
 }
 
-.headerUrlText {
+.ellipsisText {
     width: 90%;
     white-space: nowrap;
     overflow: hidden;
+    margin: 0;
     text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
 }
@@ -261,8 +295,20 @@ body{
 }
 
 .frames_active {
-    animation-duration: 5s;
-    animation-name: slideinError;
+    /*animation-duration: 5s;
+    animation-name: slideinError;*/
+    -webkit-transform: translate3d(0, -50px, 0);
+    transform: translate3d(0, -50px, 0);
+    opacity: 1;
+    -webkit-transition: all 1.5s ease;
+    transition: all 1.5s ease;
+}
+.frames_hide {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    opacity: 0;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
 }
 
 @keyframes slideinError {
@@ -325,11 +371,11 @@ body{
 
 .display-parent-div {
     /*width: 720px;*/
+    height: 100vh;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0px;
-    min-height:1000px; 
-    height:auto !important; 
+    /*min-height:1000px; */
     background: #ffffff;
 }
 
@@ -395,8 +441,6 @@ textarea {
 .header-menu {
     background: #1a247f;
     color: #FFFFFF;
-    padding-left:16px;
-    padding-right:16px;
 }
 
 .prev-icon {
@@ -407,6 +451,8 @@ textarea {
 .title {
     width:60%;
     font-size: 27px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .menu-icon {
@@ -541,7 +587,7 @@ a.toggle{
         width: 360px;
     }*/
     .display-parent-div {
-        min-height:800px;
+        /*min-height:800px;*/
     }
     .header-top i {
         font-size: 24px;
@@ -606,7 +652,7 @@ a.toggle{
         padding-left: 20px;
     }
     .sidemenu-itemEmpty {
-        width: 30px;
+        width: 20%;
     }
     .sidemenu-item {
         padding-top: 3%;
@@ -622,6 +668,29 @@ a.toggle{
         height: 32px;
         border-collapse: collapse;
         color: #333333;
+    }
+    div.ins-app {
+      float: left;
+      width: 104px;
+      font-family: Raleway;
+      margin-bottom: 30px;
+      color: #efd;
+    }
+    a.ins-app-icon {
+      width: 38px;
+      height: 38px;
+      display: block;
+    }
+    img.ins-app-icon {
+      width: 38px;
+      height: 38px;
+    }
+    div.ins-app-name {
+      text-align: center;
+      margin: 10px 0px 0px 0px;
+      /*text-shadow:    1px 4px 2px rgba(50, 50, 50, 0.54);*/
+      color: #333333;
+      font-size: 14px;
     }
     .moveIcon {
         width: 24px;
