--- a/appcell-resources/css/settings.css
+++ b/appcell-resources/css/settings.css
@@ -12,6 +12,40 @@ header {
     transition: all 0.5s ease;
 }
 
+.setting-menu {
+    position: absolute;
+    top: 0px;
+    left: 100%;
+    height: 100%;
+    background: rgba(255,255,255,1);
+    z-index: 2;
+
+    -webkit-transition: all .5s ease;
+    transition: all .5s ease;
+}
+
 .accountMenu, .roleMenu, .relationMenu {
     padding: 0px;
+}
+
+.app-profile{
+    text-align: left;
+}
+
+a.appToggle{
+    background-color: #337ab7;
+    border-color: #337ab7;
+    color: #fff;
+    text-align:center;
+}
+
+.appToggle:after{
+    text-align:center;
+    width: 10px;
+    height: 10px;
+    content: "";
+}
+
+.widthAuto {
+    width: auto !important;
 }
