--- a/appcell-resources/css/common.css
+++ b/appcell-resources/css/common.css
@@ -208,7 +208,8 @@ div.ins-app-name {
 .main_box{
     margin: auto;
     background: #1a247f; /* Old browsers */
-    width:360px;
+    /*width:360px;*/
+    width: 100%;
     /*height:100%;*/
     position:relative;
     /*left:32.5%;
@@ -246,7 +247,8 @@ div.ins-app-name {
 @media (max-width: 767px) {
     .main_box{
         margin: auto;
-        width:360px;
+        /*width:360px;*/
+        width: 100%;
         /*height:100%;*/
         position:relative;
         /*left:5%;
