--- a/appcell-resources/css/applicationmarket.css
+++ b/appcell-resources/css/applicationmarket.css
@@ -3,6 +3,7 @@
     top: 0;
     right: 0;
     bottom: 0;
+    margin-bottom: 0px;
 }
 
 .ellipsisText{
@@ -14,4 +15,31 @@
 }
 #all-app {
 
+}
+
+#app-panel {
+  padding: 0px;
+}
+
+.header-menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 32px 0 14px;
+  background-color: #4d6ce8;
+  color: #ffffff;
+  font-size: 16px;
+}
+
+.user-dashboard {
+    position: relative;
+}
+
+a.p-app,
+a.ins-app {
+  display: inline-block;
+  text-align: center;
+  padding: 8px 0;
+  margin: 0 8px;
+  width: 120px;
 }
