--- a/appcell-resources/css/applicationmarket.css
+++ b/appcell-resources/css/applicationmarket.css
@@ -17,7 +17,7 @@
 
 }
 
-#app-panel {
+.panel-body {
   padding: 0px;
 }
 
@@ -42,4 +42,36 @@ a.ins-app {
   padding: 8px 0;
   margin: 0 8px;
   width: 120px;
+}
+
+.app-info {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 16px;
+}
+.app-info > * {
+  flex: 0 0 auto;
+}
+.app-info .app-icon {
+  width: 88px;
+  height: 88px;
+  margin-right: 8px;
+}
+.app-info .app-icon img {
+  width: inherit;
+  height: inherit;
+}
+.app-info .app-data {
+  flex: 1 1 auto;
+}
+
+.detail-section {
+  border: 0 none;
+  margin: 20px 16px;
+}
+.overview {
+  margin: 20px 0 40px;
+}
+.app-install {
+  text-align: center;
 }
