--- a/appcell-resources/css/login.css
+++ b/appcell-resources/css/login.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #1a247f;
+    background-color: #4D6CEF;
 }
 
 *{
@@ -7,82 +7,52 @@ body{
     color : #FFF;
 }
 
-
-div h3 span.small{
-     color : #FFF;
-     font-size:14px;
-}
-
 h1{
-     font-weight: 200;
-     margin-bottom: 44px;
+    margin: 80px 0 44px;
+    font-weight: normal;
+    font-size: 36px;
+}
+.login-section {
+    text-align: center;
+    border: 0;
 }
 
-.image-circle-large{
-    border-radius: 50%;
-    width: 172px;
-    height: 172px;
-    border: 4px solid #FFF;
+.login-form-controls {
+    margin: 24px 0 30px;
 }
 
-.control {
-    color:#000;
-    width: 272px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 8px;
+.login-form-controls input {
+    width: 288px;
+    padding: 0 16px;
+    margin-bottom: 16px;
+    line-height: 40px;
+    border: 0 none;
+    border-radius: 20px;
+    color: #333333;
 }
-
-.form-control{
+.login-form-controls input:focus {
+    outline: none;
+    border: none;
+}
+.login_btn {
+    width: 288px;
     height: 40px;
-    border-radius: 40px;
-    color: #333333 !important;
-    font-size: 16px;
-    border: none;
-    padding-left: 16px;
-    padding-right: 16px;
-    outline: none;
-    /*-webkit-box-shadow: none !important;
-    -moz-box-shadow: none !important;
-    box-shadow: none !important;*/
-}
-
-.form-control:focus{
-    border-radius: 40px;
-    outline: none;
-    border: none;
-    /*-webkit-box-shadow: none !important;
-    -moz-box-shadow: none !important;
-    box-shadow: none !important;*/
-}
-.login_btn{
-    background-color:#1a247f !important;
-    border: 1px solid rgba(255, 255, 255, 100);
-    border-radius: 40px;
-    margin: 5px;
-    padding: 5px;
-    width: 272px;
-    outline: none;
-    font-size: 16px;
-    font-weight: inherit;
+    padding: 0 16px;
+    margin-bottom: 30px;
+    background-color: #2A34B7;
+    border: 0 none;
+    border-radius: 20px;
+    outline: 0;
 }
 
 .login_btn:hover,.login_btn:focus {
-    background-color:#44447f !important;
-    border: 1px solid rgba(255, 255, 255, 100);
-    border-radius: 40px;
-    margin: 5px;
-    padding: 5px;
-    width: 272px;
-    font-size: 16px;
-    font-weight: inherit;
-    outline: none;
+    background-color: #44447f;
 }
 
 .login_btn_g{
-    background-color:#4682b4 !important;
-    border: 1px solid rgba(255, 255, 255, 100);
-    border-radius: 40px;
+    background-color: transparent;
+    border: 0 none;
+    border-radius: 0;
     margin: 5px;
     padding: 5px;
     width: 272px;
@@ -92,9 +62,9 @@ h1{
 }
 
 .login_btn_g:hover,.login_btn_g:focus {
-    background-color:#44447f !important;
-    border: 1px solid rgba(255, 255, 255, 100);
-    border-radius: 40px;
+    background-color: rgba(0,0,0,0.2);
+    border: 0 none;
+    border-radius: 0;
     margin: 5px;
     padding: 5px;
     width: 272px;
@@ -103,37 +73,19 @@ h1{
     outline: none;
 }
 
-.new_user {
-    margin-top: 8px;
-    height: 16px;
-}
-
-.forgot_pass {
-    margin-top: 8px;
-    height: 16px;
-}
-
-.version_area {
-    font-size: 11px;
-    margin-top: 30px;
-    margin-left: 16px;
-    margin-bottom: 11px;
-}
-
-.version_area p {
-    margin: 0px;
-}
-
-.login_control {
-    position: relative;
-}
-
-.outter{
-    /*margin-top:80px;*/
-    margin-bottom:8px;
+.image-circle-large{
+    border-radius: 50%;
+    width: 92px;
+    height: 92px;
+    border: 0px none;
 }
 
 .fontBlack {
     color: #000000 !important;
     font-weight: inherit !important;
+}
+
+#tProfileDisplayName {
+    font-size: 24px;
+    margin: 16px 0 24px;
 }
