--- a/appcell-resources/css/common.css
+++ b/appcell-resources/css/common.css
@@ -87,6 +87,9 @@ header {
   color: #ffffff;
   font-size: 16px;
 }
+header-biz {
+  background-color: #31437a;
+}
 header > * {
   flex: 0 0 auto;
   padding: 0 8px;
@@ -301,19 +304,6 @@ div.ins-app-icon .badge {
   transition: all .5s ease;
 }
 
-.profile-menu {
-/*
-  padding: 0px;
-  height: 124px;
-  color: #ffffff;
-  padding-top: 16px;
-  padding-bottom: 28px;
-  padding-left: 32px;
-  padding-right: 32px;
-  background: #1a247f;
-*/
-}
-
 .overlay {
   background: rgba(0,0,0,0.4);
   cursor: hand;
@@ -470,370 +460,358 @@ div.ins-app-icon .badge {
   overflow: hidden;
 }
 
-.main_box{
-  margin: auto;
-  background: #4D6CEF; /* Old browsers */
-  /*width:360px;*/
-  width: 100%;
-  /*height:100%;*/
-  position:relative;
-    /*left:32.5%;
-    top:15%;*/
-    overflow: hidden;
-    
-    /*-webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.54);
-    -moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.54);
-    box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.54);*/
+.image-circle-small{
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #000;
+  margin-right: 10px;
+}
+
+.image-circle{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #000;
+  margin-right: 10px;
+}
+
+.image-circle-large{
+  border-radius: 50%;
+  width: 172px;
+  height: 172px;
+  border: 1px solid #000;
+}
+
+@media (max-width: 767px) {
+  .main_box{
+    margin: auto;
+    /*width:360px;*/
+    width: 100%;
+    /*height:100%;*/
+    position:relative;
+      /*left:5%;
+      top:10%;*/
+      
+      /*-webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.54);
+      -moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.54);
+      box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.54);*/
+    }
   }
 
-  .image-circle-small{
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    border: 1px solid #000;
-    margin-right: 10px;
+  .image-error {
+    width: 48px;
+    height: 48px;
   }
 
-  .image-circle{
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    border: 1px solid #000;
-    margin-right: 10px;
+  .error_box {
+    width: 100%;
+    height: 70px;
+    clear: both;
   }
 
-  .image-circle-large{
-    border-radius: 50%;
-    width: 172px;
-    height: 172px;
-    border: 1px solid #000;
-  }
-
-  @media (max-width: 767px) {
-    .main_box{
-      margin: auto;
-      /*width:360px;*/
-      width: 100%;
-      /*height:100%;*/
-      position:relative;
-        /*left:5%;
-        top:10%;*/
-        
-        /*-webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.54);
-        -moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.54);
-        box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.54);*/
-      }
-    }
-
-    .image-error {
-      width: 48px;
-      height: 48px;
-    }
-
-    .error_box {
-      width: 100%;
-      height: 70px;
-      clear: both;
-    }
-
-    .error_area {
-      background: #d10b0b;
-      margin-top: 70px;
-      opacity: 0;
-    }
-
-    .error_area_active {
-      display: block;
-    }
-
-    .msg_area {
-      width: 272px;
-      height: 48px;
-      margin-top: 11px;
-    }
-
-    .msg_area td {
-      vertical-align: middle;
-    }
-
-    .error_msg {
-      font-size: 14px;
-    }
-
-    .frames_active {
-    /*animation-duration: 5s;
-    animation-name: slideinError;*/
-    -webkit-transform: translate3d(0, -50px, 0);
-    transform: translate3d(0, -50px, 0);
-    opacity: 1;
-    -webkit-transition: all 1.5s ease;
-    transition: all 1.5s ease;
-  }
-  .frames_hide {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+  .error_area {
+    background: #d10b0b;
+    margin-top: 70px;
     opacity: 0;
-    -webkit-transition: all 1s ease;
-    transition: all 1s ease;
   }
 
-  @keyframes slideinError {
-    from {
-      margin-top:70px;
-      opacity: 0;
-    }
-    20% {
-      margin-top:20px;
-      opacity: 1;
-    }
-    80% {
-      margin-top:20px;
-      opacity: 1;
-    }
-    to {
-      margin-top:70px;
-      opacity: 0;
-    }
+  .error_area_active {
+    display: block;
   }
 
-  .modal-content {
-    background-color: rgba(255,255,255,1);
+  .msg_area {
+    width: 272px;
+    height: 48px;
+    margin-top: 11px;
   }
 
-  .navbar-content {
-    width: 100%;
-  }
-  .list-group-item {
-    text-align: left;
-    width: 100%;
-    white-space: nowrap;
-  }
-
-  .header-top i {
-    font-size: 36px;
-    color: #dfe;
-  }
-
-  .display-table {
-    display: table;
-    padding: 0;
-    /*width: 720px;*/
-    width: 100%;
-  }
-
-  .display-table-row {
-    display: table-row;
-    width: 720px;
-    position: relative;
-    overflow: hidden;
-  }
-
-  .display-table-cell {
-    display: table-cell;
-    float: none;
-    width: 100%;
-    z-index: 0;
-  }
-
-  .display-parent-div {
-    /*width: 720px;*/
-    height: 100vh;
-    position: relative;
-    overflow-x: hidden;
-    margin: 0px;
-    /*min-height:1000px; */
-    /*background: #ffffff; */
-  }
-
-  .navbar {
-    height: 36px;
-  }
-
-  .v-align {
-    vertical-align: top;
-  }
-
-  .v-align-m {
-    display:table-cell;
+  .msg_area td {
     vertical-align: middle;
   }
 
-  textarea {
-    resize:none;
-  }
-
-  /* Modal CSS */
-  .modal-header.login-header {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-
-  .modal{
-    top: 0%;
-  }
-  .modal-header .close {
-    margin-top: 2px;
-  }
-
-  .modal-body input {
-    border: 1px solid #d4d9e3;
+  .error_msg {
     font-size: 14px;
-    font-weight: 300;
-    margin: 5px 0;
-    padding: 14px 10px;
-    width: 100%;
-    color: #8492af;
-  }
-  .modal-body textarea {
-    border: 1px solid #d4d9e3;
-    font-size: 14px;
-    font-weight: 300;
-    margin: 5px 0;
-    padding: 14px 10px;
-    width: 100%;
-    color: #8492af;
-  }
-  .modal-header h4 {
-    color: #030;
-  }
-  .modal-footer {
-    border: 0 none;
-    padding: 10px 15px 26px;
-    text-align: right;
   }
 
-  /* Heder Menu CSS */
+  .frames_active {
+  /*animation-duration: 5s;
+  animation-name: slideinError;*/
+  -webkit-transform: translate3d(0, -50px, 0);
+  transform: translate3d(0, -50px, 0);
+  opacity: 1;
+  -webkit-transition: all 1.5s ease;
+  transition: all 1.5s ease;
+}
+.frames_hide {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  opacity: 0;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+}
 
-  .header-menu {
-    background: #1a247f;
-    color: #FFFFFF;
+@keyframes slideinError {
+  from {
+    margin-top:70px;
+    opacity: 0;
   }
+  20% {
+    margin-top:20px;
+    opacity: 1;
+  }
+  80% {
+    margin-top:20px;
+    opacity: 1;
+  }
+  to {
+    margin-top:70px;
+    opacity: 0;
+  }
+}
 
-  .prev-icon {
-    width:48px;
-    height:48px;
-  }
+.modal-content {
+  background-color: rgba(255,255,255,1);
+}
 
-  .title {
-    font-size: 24px;
-  }
+.navbar-content {
+  width: 100%;
+}
+.list-group-item {
+  text-align: left;
+  width: 100%;
+  white-space: nowrap;
+}
 
-  .back-title {
-    height:38px;
-    font-size: 12px;
-    vertical-align: middle;
-  }
+.header-top i {
+  font-size: 36px;
+  color: #dfe;
+}
 
-  .menu-icon {
-    width:48px;
-    height:48px;
-  }
+.display-table {
+  display: table;
+  padding: 0;
+  /*width: 720px;*/
+  width: 100%;
+}
 
-  .header-top {
-    margin: 0;
-    padding-top: 4px;
-  }
+.display-table-row {
+  display: table-row;
+  width: 720px;
+  position: relative;
+  overflow: hidden;
+}
 
-  .header-top img {
-    border-radius: 50%;
-    max-width: 96px !important;
-    width: 100%;
-  }
+.display-table-cell {
+  display: table-cell;
+  float: none;
+  width: 100%;
+  z-index: 0;
+}
 
-  .header-top li {
-    display: inline-block;
-    text-align: center;
-  }
+.display-parent-div {
+  /*width: 720px;*/
+  height: 100vh;
+  position: relative;
+  overflow-x: hidden;
+  margin: 0px;
+  /*min-height:1000px; */
+  /*background: #ffffff; */
+}
 
-  .header-top .dropdown-toggle {
-    color: #0e1a35;
-  }
+.navbar {
+  height: 36px;
+}
 
-  .header-top ul.dropdown-menu {
-    border: medium none;
-    left: -220px;
-    padding: 17px;
-    background-color: rgba(255,255,255,1);
-    width: 250px;
-    text-align: left;
-    color: #030;
-  }
+.v-align {
+  vertical-align: top;
+}
+
+.v-align-m {
+  display:table-cell;
+  vertical-align: middle;
+}
+
+textarea {
+  resize:none;
+}
+
+/* Modal CSS */
+.modal-header.login-header {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.modal{
+  top: 0%;
+}
+.modal-header .close {
+  margin-top: 2px;
+}
+
+.modal-body input {
+  border: 1px solid #d4d9e3;
+  font-size: 14px;
+  font-weight: 300;
+  margin: 5px 0;
+  padding: 14px 10px;
+  width: 100%;
+  color: #8492af;
+}
+.modal-body textarea {
+  border: 1px solid #d4d9e3;
+  font-size: 14px;
+  font-weight: 300;
+  margin: 5px 0;
+  padding: 14px 10px;
+  width: 100%;
+  color: #8492af;
+}
+.modal-header h4 {
+  color: #030;
+}
+.modal-footer {
+  border: 0 none;
+  padding: 10px 15px 26px;
+  text-align: right;
+}
+
+/* Heder Menu CSS */
+
+.header-menu {
+  background: #1a247f;
+  color: #FFFFFF;
+}
+
+.header-menu-biz {
+  background: #777777;
+}
+
+.prev-icon {
+  width:48px;
+  height:48px;
+}
+
+.title {
+  font-size: 24px;
+}
+
+.back-title {
+  height:38px;
+  font-size: 12px;
+  vertical-align: middle;
+}
+
+.menu-icon {
+  width:48px;
+  height:48px;
+}
+
+.header-top {
+  margin: 0;
+  padding-top: 4px;
+}
+
+.header-top img {
+  border-radius: 50%;
+  max-width: 96px !important;
+  width: 100%;
+}
+
+.header-top li {
+  display: inline-block;
+  text-align: center;
+}
+
+.header-top .dropdown-toggle {
+  color: #0e1a35;
+}
+
+.header-top ul.dropdown-menu {
+  border: medium none;
+  left: -220px;
+  padding: 17px;
+  background-color: rgba(255,255,255,1);
+  width: 250px;
+  text-align: left;
+  color: #030;
+}
 
 
-  .commonLabel {
-    font-size: 21px;
-    color: #333333;
-  }
+.commonLabel {
+  font-size: 21px;
+  color: #333333;
+}
 
-  a.list-group-item {
-    /*background-color: rgba(255,255,255,0.0);*/
-    color: #030;
-    white-space: nowrap;
-  }
+a.list-group-item {
+  /*background-color: rgba(255,255,255,0.0);*/
+  color: #030;
+  white-space: nowrap;
+}
 
-  a.list-group-item:hover {
-    color: #fff;
-    background-color: #337ab7;
-  }
+a.list-group-item:hover {
+  color: #fff;
+  background-color: #337ab7;
+}
 
-  .navbar-content > span {
-    font-size: 20px;
-    font-weight: 700;
-  }
+.navbar-content > span {
+  font-size: 20px;
+  font-weight: 700;
+}
 
-  .allToggle {
-    display:block;
-    width:100%;
-    height:100%;
-  }
+.allToggle {
+  display:block;
+  width:100%;
+  height:100%;
+}
 
-  a.toggle{
-    background-color: #337ab7;
-    border-color: #337ab7;
-    color: #fff;
-  }
-  .toggle:after{
-    position: absolute;
-    top: 35%;
-    right: 20px;
-    width: 10px;
-    height: 10px;
-    content: "";
-    border-top: 2px solid #7a0;
-    border-right: 2px solid #7a0;
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-  }
+a.toggle{
+  background-color: #337ab7;
+  border-color: #337ab7;
+  color: #fff;
+}
+.toggle:after{
+  position: absolute;
+  top: 35%;
+  right: 20px;
+  width: 10px;
+  height: 10px;
+  content: "";
+  border-top: 2px solid #7a0;
+  border-right: 2px solid #7a0;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
 
-  .toggleButton{
-    margin-bottom: 10px;
-  }
+.toggleButton{
+  margin-bottom: 10px;
+}
 
-  .toggle.active:after {
-    top: 40%;
-    -moz-transform: translate(0, 50%);
-    -ms-transform: translate(0, 50%);
-    -webkit-transform: translate(0, 50%);
-    transform: translate(0, 50%);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-  }
+.toggle.active:after {
+  top: 40%;
+  -moz-transform: translate(0, 50%);
+  -ms-transform: translate(0, 50%);
+  -webkit-transform: translate(0, 50%);
+  transform: translate(0, 50%);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
 
-  .edit-button {
-    top : 10%;
-    padding: 5px;
-    text-align: center;
-    border: 1px solid #606060;
-    display: inline;
-  }
-  .del-button {
-    top : 10%;
-    padding: 5px;
-    margin-left:5px;
-    text-align: center;
-    border: 1px solid #606060;
-    display: inline;
-  }
+.edit-button {
+  top : 10%;
+  padding: 5px;
+  text-align: center;
+  border: 1px solid #606060;
+  display: inline;
+}
+.del-button {
+  top : 10%;
+  padding: 5px;
+  margin-left:5px;
+  text-align: center;
+  border: 1px solid #606060;
+  display: inline;
+}
 
