--- a/appcell-resources/css/settings.css
+++ b/appcell-resources/css/settings.css
@@ -55,6 +55,10 @@ a.appToggle{
   font-size: 16px;
 }
 
+.header-meu-biz {
+  background-color: #31437a;
+}
+
 .user-dashboard {
     position: relative;
 }
