--- a/appcell-resources/css/login.css
+++ b/appcell-resources/css/login.css
@@ -1,5 +1,5 @@
-body{
-    background-color: #4D6CEF;
+.body{
+  background-color: #4D6CEF;
 }
 
 .body-biz{
@@ -108,4 +108,22 @@ h1{
 #tProfileDisplayName {
     font-size: 24px;
     margin: 16px 0 24px;
+}
+
+div.mySpinner {
+  position: fixed;
+  z-index: 999;
+  height: 5em;
+  width: 5em;
+  overflow: show;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+div.mySpinner > i {
+  color: #D3D3D3 !important;
+  font-size: 5em;
 }
