--- a/appcell-resources/css/common.css
+++ b/appcell-resources/css/common.css
@@ -806,3 +806,24 @@ a.toggle{
   display: inline;
 }
 
+div.mySpinner {
+  position: fixed;
+  z-index: 999;
+  height: 5em;
+  width: 5em;
+  overflow: show;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+div.mySpinner > i {
+  color: #D3D3D3 !important;
+  font-size: 5em;
+}
+
+div.myHiddenDiv {
+  display: none;
+}
