Change the "application" of the side menu to "application management"  - Deactivate it because it is currently unimplemented

--- a/appcell-resources/css/common.css
+++ b/appcell-resources/css/common.css
@@ -761,6 +761,9 @@ a.toggle{
   border-color: #337ab7;
   color: #fff;
 }
+a.disabled {
+    color: #d4d4d4 !important;
+}
 .toggle:after{
   position: absolute;
   top: 35%;
