Added message function  - 3.Create Sent Message List

--- a/appcell-resources/css/message.css
+++ b/appcell-resources/css/message.css
@@ -1,3 +1,13 @@
 .menu-list > li {
     border-bottom:0;
 }
+
+.unread-msg {
+    font-weight: bold;
+}
+
+.badge {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+}
