--- a/appcell-resources/css/message.css
+++ b/appcell-resources/css/message.css
@@ -1,3 +1,7 @@
+body {
+    word-wrap: break-word;
+}
+
 .menu-list > li {
     border-bottom:0;
 }
@@ -23,4 +27,29 @@
 
 .alert{
     margin-bottom:0px;
-} 
+}
+
+.not-radius {
+    border-radius: 0;
+}
+
+.message-item {
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align:middle;
+}
+
+.message-header {
+    height: 100%;
+    text-align: center;
+    padding: 5px 0;
+}
+
+.message-body {
+    border-top-left-radius:10px;
+    border-bottom-left-radius: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    white-space: normal;
+    background-color: white;
+}
