--- a/appcell-resources/css/settings.css
+++ b/appcell-resources/css/settings.css
@@ -106,3 +106,16 @@ a.ins-app {
 section:last-of-type {
   border-bottom: 0 none;
 }
+
+#dvBoxInstall .row .col-xs-2 {
+    padding-left:15px;
+    padding-right:0;
+}
+
+.barEllipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    margin: 0;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+}
