--- a/appcell-resources/css/cropper/cropper_circle_mask.css
+++ b/appcell-resources/css/cropper/cropper_circle_mask.css
@@ -8,3 +8,10 @@
     box-shadow: 0px 0px 0px 50px rgb(255,255,255);
     background-color: rgba(255,255,255,0);
 }
+
+.image-circle-large {
+    border-radius: 50%;
+    width: 172px;
+    height: 172px;
+    border: 1px solid #000;
+}
