Responding to issues 153 1. Remove right arrow from side menu logout
Close #153

--- a/appcell-resources/css/common.css
+++ b/appcell-resources/css/common.css
@@ -345,6 +345,9 @@ div.ins-app-icon .badge {
   line-height: 48px;
   margin-left: 30px;
 }
+.notImage {
+    background-image: none !important;
+}
 
 .slide-nav li.menu-title {
   background-image: none;
