Corresponding phase 3 of the account screen  - Change screen transition to page loading  - Aggregate dynamic loading of scripts into common.js  - Correction of processing accompanying changes to dynamic loading of pages

--- a/src/css/personium.css
+++ b/src/css/personium.css
@@ -1,4 +1,4 @@
-/**
+﻿/**
  * Personium
  * Copyright 2018 FUJITSU LIMITED
  *
@@ -470,7 +470,6 @@ main {
     display: inline-block;
     flex: 1;
     position: relative;
-    overflow: auto;
     word-wrap: break-word;
 }
 
